--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "eslint-config-prettier": "^9.1.0",
